All glitches fixed on PP
just need to submit data now

--- a/WebContent/personalplan/client.html
+++ b/WebContent/personalplan/client.html
@@ -49,9 +49,9 @@
 		</div>
 		<br />
 
-		<label for='createDate' id='createDateL' class='toggle'>Creation date: </label>
+		<label for='createDate' id='createDateL' class='toggle' >Creation date: </label>
 		<div id='createDateD' >
-			<input type='text' name='createDateT' id='createDateT' />
+			<input type='text' name='createDateT' id='createDateT' readonly />
 			<p class='error' id='createDateE' ></p>
 		</div>
 		<br />
