--- a/WebContent/personalplan/education.html
+++ b/WebContent/personalplan/education.html
@@ -1,8 +1,8 @@
 	<button id='PageNavPrevEdu' class='prevButton' >Previous</button>	
 	<button id='PageNavNextEdu' class='nextButton'  >Next</button>
-	<button id='PageNavSubmitBEdu' class='submitButtonas' >Submit</button>
+	<button id='PageNavSubmitBEdu' class='submitButton' >Submit</button>
 	
-	<div id='educationD'>
+	<div id='educationD2'>
 		<h4>Education</h4>
 		<label for='institutionNameT' class='toggle'>Education Institution: </label>
 		<div id='institutionNameD'>
@@ -135,12 +135,12 @@
 
 
 		//click on the previous button
-		$("#PageNavPrev").click(function(){
+		$("#PageNavPrevEdu").click(function(){
 			PageNavigation('prev', 'edu', this);
 		});
 
 		//click on the next button
-		$("#PageNavNext").click(function(){
+		$("#PageNavNextEdu").click(function(){
 			PageNavigation('next', 'edu', this);
 		});
 		
