--- a/WebContent/personalplan/health.html
+++ b/WebContent/personalplan/health.html
@@ -2,7 +2,7 @@
 	<button id='PageNavNextHealth' class='nextButton' >Next</button>
 	<button id='PageNavSubmitBHealth' class='submitButton'>Submit</button>
 	
-	<div id='healthD'>
+	<div id='healthD2'>
 		<h4>Health Details</h4>
 		<label for='relevantT' class='toggle'>Relevant information and history about disability: </label>
 		<div id='relevantD'>
@@ -11,7 +11,7 @@
 		<br />
 
 		<label for='supportT' class='toggle'>The health conditions I need support with are: </label>
-		<div id='supportD' >
+		<div id='randomDiv' >
 			<textarea id='supportT' name'supportT' rows="3" cols="50"></textarea>
 		</div>
 
