--- a/WebContent/personalplan/support.html
+++ b/WebContent/personalplan/support.html
@@ -1,5 +1,5 @@
-	<button id='PageNavPrevSupport' class='nextButton' >Previous</button>	
-	<button id='PageNavNextSupport' class='prevButton' >Next</button>
+	<button id='PageNavPrevSupport' class='prevButton' >Previous</button>	
+	<button id='PageNavNextSupport' class='nextButton' >Next</button>
 	<button id='PageNavSubmitBSupport' class='submitButton'>Submit</button>
 	
 	<div id='supportReqD'>
@@ -396,12 +396,12 @@
 		//page load
 		
 		//click on the previous button
-		$("#PageNavPrevClient").click(function(){
+		$("#PageNavPrevSupport").click(function(){
 			PageNavigation('prev', 'support', this);
 		});
 
 		//click on the next button
-		$("#PageNavNextClient").click(function(){
+		$("#PageNavNextSupport").click(function(){
 			PageNavigation('next', 'support', this);
 		});
 		
