--- a/WebContent/riskassessment/search.html
+++ b/WebContent/riskassessment/search.html
@@ -2,7 +2,7 @@
 	<table border=0>
 	<tr>
 		<td>
-			<label for='queryT' id='queryL' class='toggle'>ID: </label>
+			<label for='queryT' id='queryL' class='toggle'>Service: </label>
 			<input type='text' name='queryT' id='queryT' />
 			<button id='queryB'>Search</button>
 	
@@ -29,7 +29,7 @@ function selectRisk(el) {
 $(document).ready(function(){
 	
 	
-	//click on create new PP button
+	//click on create new risk assessment button
 	$("#createNewRiskButton").click(function(){
 		$("#searchD").hide();
 		pullData("new");
@@ -40,19 +40,18 @@ $(document).ready(function(){
 	//page loads
 	//get list of existing clients
 	$.ajax({
-		url: "./rest/personalplan/allclientswithplans/" + $.cookie('user_id') + "/" + $.cookie('auth_token'),
+		url: "./rest/risk/allriskassessment/" + $.cookie('user_id') + "/" + $.cookie('auth_token'),
 		type:"get",
 		contentType: "application/json",
 		success: function(d) {
 			$("#searchResults").html("");
 			var content = "<table>"
-			content += "<tr><th>Client ID</th><th>Name</th><th>DOB</th><th>Mobile</th><th>Telephone</th></tr>";
-			for (var i = 0; i < d.existingPlanDetails.length; i++) {
-				content += "<tr><td class='fakeLink' id='" + d.existingPlanDetails[i].user_id + "'onClick='selectPP(this);'>" + d.existingPlanDetails[i].user_id + "</td>";
-				content += "<td>" + d.existingPlanDetails[i].rName + "</td>";
-				content += "<td>" + d.existingPlanDetails[i].dob + "</td>";
-				content += "<td>" + d.existingPlanDetails[i].mobile + "</td>";
-				content += "<td>" + d.existingPlanDetails[i].telephone + "</td></tr>";
+			content += "<tr><th>Risk No.</th><th>Service</th><th>Area</th><th>Date</th></tr>";
+			for (var i = 0; i < d.existingRiskDetails.length; i++) {
+				content += "<tr><td class='fakeLink' id='" + d.existingRiskDetails[i].risk_id + "'onClick='selectRisk(this);'>" + d.existingRiskDetails[i].risk_id + "</td>";
+				content += "<td>" + d.existingRiskDetails[i].service + "</td>";
+				content += "<td>" + d.existingRiskDetails[i].area + "</td>";
+				content += "<td>" + d.existingRiskDetails[i].date + "</td>";
 			}
 			content += "</table>";
 			$("#searchResults").append(content);
@@ -67,20 +66,19 @@ $(document).ready(function(){
 	//click on search button
 	$("#queryB").click(function(){
 		$.ajax({
-			url: "./rest/personalplan/allclientswithplans/" + $.cookie('user_id') + "/" + $.cookie('auth_token'),
+			url: "./rest/risk/allclientswithplans/" + $.cookie('user_id') + "/" + $.cookie('auth_token'),
 			type:"get",
 			contentType: "application/json",
 			success: function(d) {
 				$("#searchResults").html("");
 				var content = "<table>"
-				content += "<tr><th>Client ID</th><th>Name</th><th>DOB</th><th>Mobile</th><th>Telephone</th></tr>";
-				for (var i = 0; i < d.existingPlanDetails.length; i++) {
-					if(d.existingPlanDetails[i].user_id == $("#queryT").val() || $("#queryT").val()=="") {
-						content += "<tr><td>" + d.existingPlanDetails[i].user_id + "</td>";
-						content += "<td>" + d.existingPlanDetails[i].rName + "</td>";
-						content += "<td>" + d.existingPlanDetails[i].dob + "</td>";
-						content += "<td>" + d.existingPlanDetails[i].mobile + "</td>";
-						content += "<td>" + d.existingPlanDetails[i].telephone + "</td></tr>";
+					content += "<tr><th>Risk No.</th><th>Service</th><th>Area</th><th>Date</th></tr>";
+				for (var i = 0; i < d.existingRiskDetails.length; i++) {
+					if(d.existingRiskDetails[i].service == $("#queryT").val() || $("#queryT").val()=="") {
+						content += "<tr><td class='fakeLink' id='" + d.existingRiskDetails[i].risk_id + "'onClick='selectRisk(this);'>" + d.existingRiskDetails[i].risk_id + "</td>";
+						content += "<td>" + d.existingRiskDetails[i].service + "</td>";
+						content += "<td>" + d.existingRiskDetails[i].area + "</td>";
+						content += "<td>" + d.existingRiskDetails[i].date + "</td>";
 					}
 				}
 				content += "</table>";
@@ -88,7 +86,7 @@ $(document).ready(function(){
 			},
 			error: function(xhr) {
 				// do something to handle error
-				alert("error getting existing personal plan details");
+				alert("error getting existing risk assessment details");
 			}
 		});
 	});
